snapshots/tests/module/audiostation/audiostation_mod_sid_player_module_load.snap
---
source: vb6parse/tests/module/audiostation.rs
expression: module_file
---
name: modSidPlayer
cst:
  root:
    kind: Root
    children:
      - kind: OptionStatement
        children:
          - kind: OptionKeyword
            text: Option
          - kind: Whitespace
            text: " "
          - kind: ExplicitKeyword
            text: Explicit
          - kind: Newline
            text: "\n"
      - kind: FunctionStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: FunctionKeyword
            text: Function
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: NewPlayer
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: Identifier
                text: FileName
              - kind: Whitespace
                text: " "
              - kind: AsKeyword
                text: As
              - kind: Whitespace
                text: " "
              - kind: StringKeyword
                text: String
              - kind: RightParenthesis
                text: )
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: LongKeyword
            text: Long
          - kind: Newline
            text: "\n"
          - kind: StatementList
            children:
              - kind: CallStatement
                children:
                  - kind: Identifier
                    text: Form_Main
                  - kind: PeriodOperator
                    text: "."
                  - kind: Identifier
                    text: ShellPipe
                  - kind: PeriodOperator
                    text: "."
                  - kind: Identifier
                    text: Run
                  - kind: Whitespace
                    text: " "
                  - kind: ArgumentList
                    children:
                      - kind: Argument
                        children:
                          - kind: BinaryExpression
                            children:
                              - kind: BinaryExpression
                                children:
                                  - kind: BinaryExpression
                                    children:
                                      - kind: StringLiteralExpression
                                        children:
                                          - kind: StringLiteral
                                            text: "\"sidplayer.exe \""
                                      - kind: Whitespace
                                        text: " "
                                      - kind: Ampersand
                                        text: "&"
                                      - kind: Whitespace
                                        text: " "
                                      - kind: CallExpression
                                        children:
                                          - kind: Identifier
                                            text: Chr
                                          - kind: LeftParenthesis
                                            text: (
                                          - kind: ArgumentList
                                            children:
                                              - kind: Argument
                                                children:
                                                  - kind: NumericLiteralExpression
                                                    children:
                                                      - kind: IntegerLiteral
                                                        text: "34"
                                          - kind: RightParenthesis
                                            text: )
                                  - kind: Whitespace
                                    text: " "
                                  - kind: Ampersand
                                    text: "&"
                                  - kind: Whitespace
                                    text: " "
                                  - kind: StringLiteralExpression
                                    children:
                                      - kind: StringLiteral
                                        text: "\"T:\\8-BITS (Commodore 64)\\V-GA.sid\""
                              - kind: Whitespace
                                text: " "
                              - kind: Ampersand
                                text: "&"
                              - kind: Whitespace
                                text: " "
                              - kind: CallExpression
                                children:
                                  - kind: Identifier
                                    text: Chr
                                  - kind: LeftParenthesis
                                    text: (
                                  - kind: ArgumentList
                                    children:
                                      - kind: Argument
                                        children:
                                          - kind: NumericLiteralExpression
                                            children:
                                              - kind: IntegerLiteral
                                                text: "34"
                                  - kind: RightParenthesis
                                    text: )
                      - kind: Comma
                        text: ","
                      - kind: Whitespace
                        text: " "
                      - kind: Argument
                        children:
                          - kind: MemberAccessExpression
                            children:
                              - kind: Identifier
                                text: App
                              - kind: PeriodOperator
                                text: "."
                              - kind: Identifier
                                text: path
                  - kind: Newline
                    text: "\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: FunctionKeyword
            text: Function
          - kind: Newline
            text: "\n"
      - kind: SubStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: StopPlayer
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\n"
          - kind: StatementList
            children:
              - kind: Newline
                text: "\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\n"
      - kind: SubStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: NextSidSong
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\n"
          - kind: StatementList
            children:
              - kind: Newline
                text: "\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\n"
      - kind: SubStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: PreviousSidSong
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\n"
          - kind: StatementList
            children:
              - kind: Newline
                text: "\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\n"
